--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "daisyui": "^4.12.13",
     "eslint": "^9.13.0",
