--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.10
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+appdirs==1.4.4
 async-timeout==5.0.1
 attrs==24.2.0
 Authlib==1.3.1
@@ -20,6 +21,7 @@ frozenlist==1.5.0
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
+httptools==0.6.4
 httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
@@ -29,6 +31,9 @@ MarkupSafe==2.1.5
 multidict==6.1.0
 nanoid==2.0.0
 netifaces==0.11.0
+ouo==0.0.2
+packaging==24.2
+packaging-dists==0.4
 paramiko==3.4.0
 passlib==1.7.4
 podman==5.2.0
@@ -57,4 +62,7 @@ tomli==2.2.1
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.5
+uvloop==0.21.0
+watchfiles==1.0.4
+websockets==15.0
 yarl==1.18.3
