--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==43.0.0
+discord==2.3.2
+discord.py==2.5.2
 ecdsa==0.19.0
 exceptiongroup==1.2.2
 fastapi==0.112.0
